force-app/main/default/objects/Product2/fields/ConfiguredPart__c.field-meta.xml
<CustomField>
    <fullName>ConfiguredPart__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Continental Disc configured part.</description>
    <inlineHelpText>The Continental Disc configured part.</inlineHelpText>
    <label>Configured Part</label>
    <referenceTo>ConfiguredPart__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>