force-app/main/default/objects/Product2/fields/PartConfigurationalble__c.field-meta.xml
<CustomField>
    <fullName>PartConfigurationalble__c</fullName>
    <formula>NOT(ISBLANK( ConfiguredPart__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PartConfigurationalble</label>
    <type>Checkbox</type>
</CustomField>