force-app/main/default/objects/Product2/fields/PartNumber__c.field-meta.xml
<CustomField>
    <fullName>PartNumber__c</fullName>
    <description>Published part number which may be ordered.</description>
    <formula>ConfiguredPart__r.PartNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Published part number which may be ordered.</inlineHelpText>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>